# aGPT

./: README.md  index.html  package-lock.json  package.json  screenshot_window.html  vite.config.ts
src/: gpt.ts  main.ts  screenshot.ts  style.css
src-tauri/: Cargo.toml  gpt-log.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
